ci/openshift/postgres-deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      serviceAccountName: postgres-sa
      securityContext:
        runAsUser: 1005810000
        runAsGroup: 1005810000
        fsGroup: 1005810000
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            limits:
              cpu: "1000m"
              memory: "1Gi"
            requests:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - vista_user
                - -d
                - vista
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - vista_user
                - -d
                - vista
            initialDelaySeconds: 60
            periodSeconds: 15
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: postgres-data
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432


# oc apply -f ci/openshift/postgres-secret.yaml
# oc apply -f ci/openshift/postgres-deploy.yaml
# oc apply -f ci/openshift/postgres-sa.yaml
# oc apply -f ci/openshift/postgres-pvc.yaml
